--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,13 @@
 			<artifactId>HikariCP</artifactId>
 		</dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
