--- a/src/test/resources/application-tests.yml
+++ b/src/test/resources/application-tests.yml
@@ -3,7 +3,10 @@ server:
     include-stacktrace: on_param
 
 spring:
-  profiles: test
+  application:
+    name: builders-project
+  profiles:
+    active: test
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:import.sql'
     driver-class-name: org.h2.Driver
